# openvino.genai

./: .gitmodules
samples/cpp/continuous_batching_benchmark/: continuous_batching_benchmark.cpp
samples/cpp/text_generation/: greedy_causal_lm.cpp2  multinomial_causal_lm.cpp
samples/cpp/whisper_speech_recognition/: CMakeLists.txt  pa_experimental_test.cpp  whisper_dynamic_batching_benchmark.cpp  whisper_speech_recognition.cpp
samples/python/generation_analyzer/: README.md  generation_analyzer.py
src/cpp/: CMakeLists.txt
src/cpp/include/openvino/genai/: continuous_batching_pipeline.hpp  generation_config.hpp  generation_handle.hpp  logits_stats.hpp  model_transformations.hpp  scheduler_config.hpp  whisper_pipeline.hpp
src/cpp/src/: circular_buffer_queue.hpp  continuous_batching_impl.cpp  continuous_batching_pipeline.cpp  debug_utils.hpp  generation_config.cpp  generation_handle.cpp  icontinuous_batching.cpp  icontinuous_batching.hpp  llm_pipeline_stateful.cpp  llm_pipeline_static.cpp  model_runner.hpp  sampler.cpp  sampler.hpp  sequence_group.hpp  text_callback_streamer.cpp  timer.hpp  utils.cpp  utils.hpp
src/cpp/src/continuous_batching/: cache_manager.hpp  cross_kv_cache.hpp  model_runner.hpp  pipeline.cpp  pipeline_base.cpp  pipeline_base.hpp  pipeline_impl.cpp  pipeline_impl.hpp  scheduler.hpp
src/cpp/src/prompt_lookup/: continuous_batching_for_prompt_lookup.cpp  prompt_lookup_impl.cpp  prompt_lookup_impl.hpp
src/cpp/src/sampling/: logit_transformers.hpp  logits_stats_compute.hpp  sampler.cpp
src/cpp/src/sampling/structured_output/: xgrammar_backend.cpp  xgrammar_backend.hpp
src/cpp/src/speculative_decoding/: continuous_batching_for_speculative_decoding_impl.cpp  speculative_decoding_impl.cpp  speculative_decoding_impl.hpp
src/cpp/src/speculative_decoding/continuous_batching/: eagle3_strategy.cpp  eagle3_strategy.hpp  fast_draft_strategy.cpp  fast_draft_strategy.hpp
src/cpp/src/tokenizer/: tokenizer.cpp
src/cpp/src/visual_language/: embedding_model.cpp  embedding_model.hpp  inputs_embedder.cpp  inputs_embedder.hpp  pipeline.cpp
src/cpp/src/visual_language/internvl_chat/: classes.cpp
src/cpp/src/visual_language/llava/: classes.cpp
src/cpp/src/visual_language/llava_next/: classes.cpp
src/cpp/src/visual_language/minicpm/: classes.cpp  classes.hpp
src/cpp/src/visual_language/phi3_vision/: classes.cpp
src/cpp/src/whisper/: feature_extractor.cpp  logit_processor.cpp  pipeline_poc.cpp  streamer.cpp  streamer.hpp  whisper.cpp  whisper.hpp
src/python/: py_continuous_batching_pipeline.cpp  py_generation_config.cpp
whisper_poc_summary/: whisper_poc_summary.md
(+4 files in other folders)
